<resources>
    <string name="app_name">Sazzer</string>
    <string name="nameSong">Song</string>
    <string name="nameArtist">Artist</string>
    <string name="nameAlbum">Album</string>
    <string name="playSong">Play</string>
    <string name="prevSong">Previous Song</string>
    <string name="nextSong">Next Song</string>
    <string name="playListAction">Open Playlist</string>
    <string name="recordVoice">Record Voice</string>
    <string name="downloadingLyrics">Downloading lyrics…</string>
    <string name="successfulDownload">Lyrics downloaded successfully</string>
    <string name="lyricsNotAvailable">Lyrics not available, try with another song</string>
    <string name="forbiddenLyrics">Forbidden lyrics, try with another song</string>
    <string name="showLyrics">Show Lyrics</string>
    <string name="welcome_message">Are you ready?</string>
    <string name="welcome2">Let\'s do it! But first, we need some information</string>
    <string name="hint_name">User Name</string>
    <string name="hint_password">Create a password</string>
    <string name="hint_password2">Password</string>
    <string name="next_btn">Next</string>
    <string name="private_audio">Privates Audios</string>
    <string name="firstWelcome_message">Welcome to Sazzer!</string>
    <string name="password_message">Insert your password</string>
    <string name="password_message2">Please enter the password you set when you downloaded Sazzer</string>
    <string name="choose_pic">Choose a profile picture</string>
    <string name="hello_main">Hello</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_night">Good Night</string>
    <string name="update_pic">Click on the photo to update</string>
    <string name="user_name_description">Update user name</string>
    <string name="pass_name_description">Update your password</string>
    <string name="settings_msg">Settings</string>
    <string name="personal_inf">Personal Information</string>
    <string name="custom_sett">Personalization</string>
    <string name="new_password">Enter your new password</string>
    <string name="new_password_btn">Update password</string>
    <string name="biometric_ms1">Biometric login Sazzer</string>
    <string name="biometric_ms2">Log in using your biometric credential</string>
    <string name="biometric_ms3">Use your user password</string>
    <string name="language_set">Language</string>
    <string name="language_set_des">Change the language of Sazzer</string>
    <string name="theme_set">Theme</string>
    <string name="theme_set_des">Change the theme of Sazzer</string>
</resources>