<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password_message"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/password_message2"
        android:textSize="15sp"/>



    <EditText
        android:id="@+id/user_password2"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_next2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:text="@string/next_btn"
        android:layout_height="wrap_content"/>

</LinearLayout>