<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageCover"
        android:layout_weight="3"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/default_cover"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_weight="5"
        android:background="@color/nowPlayingBackgroundColor"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/artistName"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textColor="@color/artistColor"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textAlignment="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:textSize="25sp"
            android:scrollHorizontally="true"
            android:textColor="@color/songNameColor"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:showDividers="middle">

            <ImageButton android:id="@+id/PrevSong"
                android:contentDescription="@string/prevSong"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/ic_baseline_skip_previous_24"
                />

            <ImageButton android:id="@+id/TogglePlay"
                android:contentDescription="@string/playSong"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/ic_pause_white_48dp"
                />

            <ImageButton android:id="@+id/NextSong"
                android:contentDescription="@string/nextSong"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/ic_baseline_skip_next_24"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:layout_weight="0"
            >

            <TextView
                android:layout_weight="2"
                android:id="@+id/curTime"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/totalTime"
                android:layout_weight="2"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <SeekBar android:id="@+id/sbProgress"
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>